--- a/page-4.html
+++ b/page-4.html
@@ -14,7 +14,7 @@
 <div id="demo-2">11:25</div>
 
 <div class="message-list" id="i9qq1">
-<h4>Thomas Kienle: gibt es noch weitere Praktukumsaufgaben in diesem Semester?</h4>
+<h4>Thomas Kienle: gibt es noch weitere Praktikumsaufgaben in diesem Semester?</h4>
 
 </div>
 <input class="message-input" type="text" id="i9qq" class="form-control" /><p></p>
