--- a/page-4.html
+++ b/page-4.html
@@ -11,7 +11,7 @@
 <div id="i52r" class="gpd-text">I-311 Computergrafik II</div>
 <a href="/page-3.html" id="i1ma" class="gpd-button2">zur&uumlck zur Modulliste&nbsp;</a>
 
-<div id="demo-2">11:25</div>
+<div id="demo-2">Gestern um 20:15</div>
 
 <div class="message-list" id="i9qq1">
 <h4>Thomas Kienle: gibt es noch weitere Praktikumsaufgaben in diesem Semester?</h4>
@@ -33,7 +33,7 @@ function myFunction() {
   var x = document.getElementById("demo");
   var h = addZero(d.getHours());
   var m = addZero(d.getMinutes());
-  x.innerHTML = h + ":" + m;
+  x.innerHTML = "Heute um " + h + ":" + m;
 }
 </script>
 
