--- a/page-3.html
+++ b/page-3.html
@@ -62,9 +62,9 @@ var btn = document.querySelector('.btn');
 btn.addEventListener('click', active);
 
 function active(){
-	var add = Number(notify.getAttribute('data-count'))|| 0;
-	notify.setAttribute('data-count', add + 1);
-	if (add === 0) {
+	var add = Number(notify.getAttribute('data-count'))|| 1;
+	notify.setAttribute('data-count', add);
+	if (add === 1) {
 		notify.classList.add('add-numb');
 	}
 	false;
